--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
+    "autoprefixer": "^10.4.13",
     "chai": "^4.2.0",
     "dotenv": "^16.0.3",
     "eslint": "8.27.0",
@@ -31,7 +32,9 @@
     "ethers": "^5.4.7",
     "hardhat": "^2.11.1",
     "hardhat-gas-reporter": "^1.0.8",
+    "postcss": "^8.4.18",
     "solidity-coverage": "^0.8.0",
+    "tailwindcss": "^3.2.3",
     "typechain": "^8.1.0"
   }
 }
