--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.0",
+    "@rainbow-me/rainbowkit": "^0.7.4",
     "next": "13.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "wagmi": "^0.7.15"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
@@ -29,7 +31,7 @@
     "dotenv": "^16.0.3",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
-    "ethers": "^5.4.7",
+    "ethers": "^5.7.2",
     "hardhat": "^2.11.1",
     "hardhat-gas-reporter": "^1.0.8",
     "postcss": "^8.4.18",
