--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.0",
-    "@rainbow-me/rainbowkit": "^0.7.4",
     "next": "13.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "wagmi": "^0.7.15"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
