--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bundlr-network/client": "^0.9.0",
     "@openzeppelin/contracts": "^4.8.0",
+    "bignumber.js": "^9.1.0",
     "next": "13.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
