--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@openzeppelin/contracts": "^4.8.0",
     "bignumber.js": "^9.1.0",
     "graphql": "^16.6.0",
+    "iconsax-react": "^0.0.8",
+    "moment": "^2.29.4",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
